--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="h-100">
+<body class="d-flex flex-column h-100 ">
   <div id="root" class="d-flex flex-column h-100"></div>
   <script type="module" src="/src/main.jsx"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
