finished routines list, and routines detail, api subscriptions, seeds routines and gyms

--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,7 @@
     integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./node_modules/react-responsive-carousel/lib/styles/carousel.min.css"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap">
 
 </head>
 
